Made further changes to the Work History heading, and also allowed it to share styles with the section heading in css, as well as giving it it's own seperate style rule for its font color. Also found an issue where viewing the webpage on mobile would cause the timeline to sit too far towards the bottom of the div, this was resolves by wrapping the timeline-items in a seperate div, which i then applied a margin-bottom to. This allowed for the skills section to be pushed away from the timeline when viewed on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ h4 {
     display: table;
 }
 
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -294,8 +295,14 @@ footer .cv-pdf i:hover{
     background: #fafafa;
 }
 
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
 
-
+.history-items {
+    margin-bottom: 30px;
+}
 
 
 
